src/objects/Default_Product_Search__c.object
<CustomObject>
    <description>CRM-MC-ESPSFDCQI-102 - Holds the saved product search criteria by a user through the Product Selector.</description>
    <fields>
        <fullName>Default_Billing_System__c</fullName>
        <description>CRM-MC-ESPSFDCQI-1129 -</description>
        <label>Default Billing System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_COE_Name__c</fullName>
        <description>CRM-MC-ESPSFDCQI-102 - Used to store the default COE Name chosen by the user from the Product Selector.</description>
        <inlineHelpText>Used to store the default COE Name chosen by the user from the Product Selector.</inlineHelpText>
        <label>Default COE Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Delivery_Type__c</fullName>
        <description>CRM-MC-ESPSFDCQI-1129 -</description>
        <label>Default Delivery Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Global_Product_Code__c</fullName>
        <description>ESPSFDCQI-11178</description>
        <label>Default Global Product Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Hierarchy_Chain__c</fullName>
        <description>ESPSFDCQI-12072</description>
        <label>Default Hierarchy Chain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Hierarchy_Level__c</fullName>
        <description>CRM-MC-ESPSFDCQI-100</description>
        <label>Default Hierarchy Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Offering_Group__c</fullName>
        <description>CRM-MC-ESPSFDCQI-102 - Used to store the default Offering Group chosen by the user from the Product Selector.</description>
        <inlineHelpText>Used to store the default Offering Group chosen by the user from the Product Selector.</inlineHelpText>
        <label>Default Offering Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Offering_Segment__c</fullName>
        <description>CRM-MC-ESPSFDCQI-102 - Used to store the default Offering Segment chosen by the user from the Product Selector.</description>
        <inlineHelpText>Used to store the default Offering Segment chosen by the user from the Product Selector.</inlineHelpText>
        <label>Default Offering Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Offering_Type__c</fullName>
        <description>CRM-MC-ESPSFDCQI-102 - Used to store the default Offering Type chosen by the user from the Product Selector.</description>
        <inlineHelpText>Used to store the default Offering Type chosen by the user from the Product Selector.</inlineHelpText>
        <label>Default Offering Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_PSA_PROJECT_REQUIRED__c</fullName>
        <description>ESPSFDCQI-11179</description>
        <label>Default PSA PROJECT REQUIRED</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_ProductGroup__c</fullName>
        <description>CRM-MC-ESPSFDCQI-4600</description>
        <label>Default Product Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Product_Group__c</fullName>
        <description>CRM-MC-ESPSFDCQI-102 - Used to store the default Product Group chosen by the user from the Product Selector.</description>
        <inlineHelpText>Used to store the default Product Group chosen by the user from the Product Selector.</inlineHelpText>
        <label>Default Product Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Territory__c</fullName>
        <description>CRM-MC-ESPSFDCQI-67 - The territorythe product is associated to.</description>
        <inlineHelpText>The territory the product is associated to.</inlineHelpText>
        <label>Default Territory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Asia Mid Markets</fullName>
                </value>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Cayman Islands</fullName>
                </value>
                <value>
                    <fullName>Chad</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Congo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_US_Practice__c</fullName>
        <description>ESPSFDCQI-11413</description>
        <label>Default US Practice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Unit_Name__c</fullName>
        <description>CRM-MC-ESPSFDCQI-102 - Used to store the default Unit Name chosen by the user from the Product Selector.</description>
        <inlineHelpText>Used to store the default Unit Name chosen by the user from the Product Selector.</inlineHelpText>
        <label>Default Unit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Df_Hierarchy_Global_Code_Description__c</fullName>
        <description>CRM-MC-ESPSFDCQI-4600</description>
        <label>Df Hierarchy Global Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CRM-MC-ESPSFDCQI-102 - The user who has defined their default product search criteria within the Product Selector.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Default_Product_Searches</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Default Product Search</label>
    <nameField>
        <displayFormat>DC-{000000}</displayFormat>
        <label>Default Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Default Product Searches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>